--- a/blogpostclient/src/index.css
+++ b/blogpostclient/src/index.css
@@ -15,3 +15,23 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@layer utilities{
+  .vertical-line{
+    border-left: 2px solid black;
+    height: 700px;
+  }
+  .one-edge-shadow {
+    box-shadow: 5px 0px 0px gray;
+  }
+  .button-green-border{
+    border: 2px solid rgb(34 197 94);
+  }
+  .gray-border{
+    border: 0.5px solid gray;
+  }
+
+  .background-whitish{
+    background-color: #e3e9ff;
+  }
+}
