post page half done

--- a/blogpostclient/src/index.css
+++ b/blogpostclient/src/index.css
@@ -34,4 +34,12 @@ code {
   .background-whitish{
     background-color: #e3e9ff;
   }
+
+  .light-orange{
+    background-color: #ffc100;
+  }
+
+  .blizzard-blue{
+    background-color: #429ebd;
+  }
 }
