posts page somewhat there

--- a/blogpostclient/src/index.css
+++ b/blogpostclient/src/index.css
@@ -39,6 +39,10 @@ code {
     background-color: #ffc100;
   }
 
+  .dark-orange{
+    background-color: #f77000;
+  }
+
   .blizzard-blue{
     background-color: #429ebd;
   }
